// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table addDel 1`] = `
<div
  data-testid="tableA"
>
  <div
    style="overflow: auto; max-height: 80vh;"
  >
    <table
      class="table table-striped table-bordered table-hover"
    >
      <thead>
        <tr>
          <th>
            ColA
          </th>
          <th>
            ColB
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <column-text>
              a1
            </column-text>
          </td>
          <td>
            <column-set>
              <div>
                c1
              </div>
            </column-set>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonEdit1"
              type="button"
            >
              Edit
            </button>
          </td>
        </tr>
        <tr>
          <td>
            <column-text>
              a2
            </column-text>
          </td>
          <td>
            <column-set>
              -
            </column-set>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonEdit2"
              type="button"
            >
              Edit
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Table clears missing slot 1`] = `
<div
  data-testid="tableA"
>
  <div
    style="overflow: auto; max-height: 80vh;"
  >
    <table
      class="table table-striped table-bordered table-hover"
    >
      <thead>
        <tr>
          <th>
            ColA
          </th>
          <th>
            ColB
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <column-text>
              a1
            </column-text>
          </td>
          <td>
            <column-set>
              -
            </column-set>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonEdit1"
              type="button"
            >
              Edit
            </button>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonDel1"
              type="button"
            >
              Del
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <button
    class="btn btn-primary"
    data-testid="buttonAdd"
    type="button"
  >
    Add
  </button>
  <button
    class="btn btn-primary"
    data-testid="buttonClear"
    type="button"
  >
    Clear
  </button>
</div>
`;

exports[`Table confirms & clears list 1`] = `
<div
  data-testid="tableA"
>
  <div
    style="overflow: auto; max-height: 80vh;"
  >
    <table
      class="table table-striped table-bordered table-hover"
    >
      <thead>
        <tr>
          <th>
            ColA
          </th>
          <th>
            ColB
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <column-text>
              a1
            </column-text>
          </td>
          <td>
            <column-set>
              <div>
                c1
              </div>
            </column-set>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonEdit1"
              type="button"
            >
              Edit
            </button>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonDel1"
              type="button"
            >
              Del
            </button>
          </td>
        </tr>
        <tr>
          <td>
            <column-text>
              a2
            </column-text>
          </td>
          <td>
            <column-set>
              -
            </column-set>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonEdit2"
              type="button"
            >
              Edit
            </button>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonDel2"
              type="button"
            >
              Del
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <button
    class="btn btn-primary"
    data-testid="buttonAdd"
    type="button"
  >
    Add
  </button>
  <button
    class="btn btn-primary"
    data-testid="buttonClear"
    type="button"
  >
    Clear
  </button>
</div>
`;

exports[`Table confirms & clears list 2`] = `
<div
  data-testid="tableA"
>
  <div
    style="overflow: auto; max-height: 80vh;"
  >
    <table
      class="table table-striped table-bordered table-hover"
    >
      <thead>
        <tr>
          <th>
            ColA
          </th>
          <th>
            ColB
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <column-text>
              a1
            </column-text>
          </td>
          <td>
            <column-set>
              <div>
                c1
              </div>
            </column-set>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonEdit1"
              type="button"
            >
              Edit
            </button>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonDel1"
              type="button"
            >
              Del
            </button>
          </td>
        </tr>
        <tr>
          <td>
            <column-text>
              a2
            </column-text>
          </td>
          <td>
            <column-set>
              -
            </column-set>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonEdit2"
              type="button"
            >
              Edit
            </button>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonDel2"
              type="button"
            >
              Del
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <button
    class="btn btn-primary"
    data-testid="buttonAdd"
    type="button"
  >
    Add
  </button>
  <button
    class="btn btn-primary"
    data-testid="buttonClear"
    type="button"
  >
    Confirm
  </button>
</div>
`;

exports[`Table confirms & clears list 3`] = `
<div
  data-testid="tableA"
>
  <div
    style="overflow: auto; max-height: 80vh;"
  >
    <table
      class="table table-striped table-bordered table-hover"
    >
      <thead>
        <tr>
          <th>
            ColA
          </th>
          <th>
            ColB
          </th>
        </tr>
      </thead>
      <tbody />
    </table>
  </div>
  <button
    class="btn btn-primary"
    data-testid="buttonAdd"
    type="button"
  >
    Add
  </button>
  <button
    class="btn btn-primary"
    data-testid="buttonClear"
    type="button"
  >
    Clear
  </button>
</div>
`;

exports[`Table enables a slot 1`] = `
<div
  data-testid="tableA"
>
  <div
    style="overflow: auto; max-height: 80vh;"
  >
    <table
      class="table table-striped table-bordered table-hover"
    >
      <thead>
        <tr>
          <th>
            ColA
          </th>
          <th>
            ColB
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <column-text>
              a1
            </column-text>
          </td>
          <td>
            <column-set>
              <div>
                c1
              </div>
            </column-set>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonEdit20"
              type="button"
            >
              Edit
            </button>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonDel20"
              type="button"
            >
              Del
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <button
    class="btn btn-primary"
    data-testid="buttonAdd"
    type="button"
  >
    Add
  </button>
  <button
    class="btn btn-primary"
    data-testid="buttonClear"
    type="button"
  >
    Clear
  </button>
</div>
`;

exports[`Table enters row into list 1`] = `
<div
  data-testid="tableA"
>
  <div
    style="overflow: auto; max-height: 80vh;"
  >
    <table
      class="table table-striped table-bordered table-hover"
    >
      <thead>
        <tr>
          <th>
            ColA
          </th>
          <th>
            ColB
          </th>
          <th>
            ColC
          </th>
          <th>
            ColD
          </th>
          <th>
            ColE
          </th>
          <th>
            ColF
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <column-text>
              a1
            </column-text>
          </td>
          <td>
            <column-set>
              <div>
                c1
              </div>
            </column-set>
          </td>
          <td>
            <column-text>
              2001/01/01
            </column-text>
          </td>
          <td>
            <column-text>
              c1
            </column-text>
          </td>
          <td>
            <table-buttons>
              <button
                class="btn btn-primary"
                data-testid="buttonColE11"
                type="button"
              >
                11/a1
              </button>
            </table-buttons>
          </td>
          <td>
            <column-text>
              -
            </column-text>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonEdit11"
              type="button"
            >
              Edit
            </button>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonDel11"
              type="button"
            >
              Del
            </button>
          </td>
        </tr>
        <tr>
          <td>
            <column-text>
              a2
            </column-text>
          </td>
          <td>
            <column-set>
              -
            </column-set>
          </td>
          <td>
            <column-text>
              2002/01/01
            </column-text>
          </td>
          <td>
            <column-text>
              c2
            </column-text>
          </td>
          <td>
            <table-buttons>
              <button
                class="btn btn-primary"
                data-testid="buttonColE12"
                type="button"
              >
                12/a2
              </button>
            </table-buttons>
          </td>
          <td>
            <column-text>
              c2
            </column-text>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonEdit12"
              type="button"
            >
              Edit
            </button>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonDel12"
              type="button"
            >
              Del
            </button>
          </td>
        </tr>
        <tr>
          <td>
            <column-text>
              <input
                class="form-control"
                data-testid="inputColA"
                style="min-width: 10em;"
                value="a"
              />
            </column-text>
          </td>
          <td>
            <column-set>
              <div>
                <input
                  data-testid="inputColB1"
                  type="checkbox"
                />
                 
                c1
              </div>
            </column-set>
          </td>
          <td>
            <column-text>
              <input
                class="form-control"
                data-testid="inputColC"
                style="min-width: 10em;"
                value="2000/01/01"
              />
            </column-text>
          </td>
          <td>
            <column-text>
              <div>
                <label
                  class="form-label"
                >
                  id
                </label>
                <div
                  class="rbt"
                  style="min-width: 10em; border-color: red; outline: none; position: relative;"
                  tabindex="-1"
                >
                  <div
                    style="display: flex; flex: 1; height: 100%; position: relative;"
                  >
                    <input
                      aria-autocomplete="both"
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      autocomplete="off"
                      class="rbt-input-main form-control rbt-input"
                      data-testid="inputColD"
                      placeholder="Choose..."
                      role="combobox"
                      type="text"
                      value=""
                    />
                    <input
                      aria-hidden="true"
                      class="rbt-input-hint"
                      readonly=""
                      style="background-color: transparent; border-color: transparent; box-shadow: none; color: rgba(0, 0, 0, 0.54); left: 0px; pointer-events: none; position: absolute; top: 0px; width: 100%;"
                      tabindex="-1"
                      value=""
                    />
                  </div>
                </div>
              </div>
              <div>
                <label
                  class="form-label"
                >
                  bc
                </label>
                <div
                  class="rbt"
                  style="min-width: 10em; border-color: red; outline: none; position: relative;"
                  tabindex="-1"
                >
                  <div
                    style="display: flex; flex: 1; height: 100%; position: relative;"
                  >
                    <input
                      aria-autocomplete="both"
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      autocomplete="off"
                      class="rbt-input-main form-control rbt-input"
                      data-testid="inputViewColD"
                      placeholder="Choose..."
                      role="combobox"
                      type="text"
                      value=""
                    />
                    <input
                      aria-hidden="true"
                      class="rbt-input-hint"
                      readonly=""
                      style="background-color: transparent; border-color: transparent; box-shadow: none; color: rgba(0, 0, 0, 0.54); left: 0px; pointer-events: none; position: absolute; top: 0px; width: 100%;"
                      tabindex="-1"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </column-text>
          </td>
          <td>
            <table-buttons>
              <button
                class="btn btn-primary"
                data-testid="buttonColE13"
                type="button"
              >
                13/a
              </button>
            </table-buttons>
          </td>
          <td>
            <column-text>
              <div>
                <label
                  class="form-label"
                >
                  bc
                </label>
                <div
                  class="rbt"
                  style="min-width: 10em; border-color: red; outline: none; position: relative;"
                  tabindex="-1"
                >
                  <div
                    style="display: flex; flex: 1; height: 100%; position: relative;"
                  >
                    <input
                      aria-autocomplete="both"
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      autocomplete="off"
                      class="rbt-input-main form-control rbt-input"
                      data-testid="inputColF"
                      placeholder="Choose..."
                      role="combobox"
                      type="text"
                      value=""
                    />
                    <input
                      aria-hidden="true"
                      class="rbt-input-hint"
                      readonly=""
                      style="background-color: transparent; border-color: transparent; box-shadow: none; color: rgba(0, 0, 0, 0.54); left: 0px; pointer-events: none; position: absolute; top: 0px; width: 100%;"
                      tabindex="-1"
                      value=""
                    />
                  </div>
                </div>
              </div>
              <div>
                <label
                  class="form-label"
                >
                  id
                </label>
                <div
                  class="rbt"
                  style="min-width: 10em; border-color: red; outline: none; position: relative;"
                  tabindex="-1"
                >
                  <div
                    style="display: flex; flex: 1; height: 100%; position: relative;"
                  >
                    <input
                      aria-autocomplete="both"
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      autocomplete="off"
                      class="rbt-input-main form-control rbt-input"
                      data-testid="inputViewColF"
                      placeholder="Choose..."
                      role="combobox"
                      type="text"
                      value=""
                    />
                    <input
                      aria-hidden="true"
                      class="rbt-input-hint"
                      readonly=""
                      style="background-color: transparent; border-color: transparent; box-shadow: none; color: rgba(0, 0, 0, 0.54); left: 0px; pointer-events: none; position: absolute; top: 0px; width: 100%;"
                      tabindex="-1"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </column-text>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonSave"
              type="button"
            >
              Save
            </button>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonCancel"
              type="button"
            >
              Cancel
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <button
    class="btn btn-primary"
    data-testid="buttonAdd"
    type="button"
  >
    Add
  </button>
  <button
    class="btn btn-primary"
    data-testid="buttonClear"
    type="button"
  >
    Clear
  </button>
</div>
`;

exports[`Table enters row into list 2`] = `
<div
  data-testid="tableA"
>
  <div
    style="overflow: auto; max-height: 80vh;"
  >
    <table
      class="table table-striped table-bordered table-hover"
    >
      <thead>
        <tr>
          <th>
            ColA
          </th>
          <th>
            ColB
          </th>
          <th>
            ColC
          </th>
          <th>
            ColD
          </th>
          <th>
            ColE
          </th>
          <th>
            ColF
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <column-text>
              a1
            </column-text>
          </td>
          <td>
            <column-set>
              <div>
                c1
              </div>
            </column-set>
          </td>
          <td>
            <column-text>
              2001/01/01
            </column-text>
          </td>
          <td>
            <column-text>
              c1
            </column-text>
          </td>
          <td>
            <table-buttons>
              <button
                class="btn btn-primary"
                data-testid="buttonColE11"
                type="button"
              >
                11/a1
              </button>
            </table-buttons>
          </td>
          <td>
            <column-text>
              -
            </column-text>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonEdit11"
              type="button"
            >
              Edit
            </button>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonDel11"
              type="button"
            >
              Del
            </button>
          </td>
        </tr>
        <tr>
          <td>
            <column-text>
              a2
            </column-text>
          </td>
          <td>
            <column-set>
              -
            </column-set>
          </td>
          <td>
            <column-text>
              2002/01/01
            </column-text>
          </td>
          <td>
            <column-text>
              c2
            </column-text>
          </td>
          <td>
            <table-buttons>
              <button
                class="btn btn-primary"
                data-testid="buttonColE12"
                type="button"
              >
                12/a2
              </button>
            </table-buttons>
          </td>
          <td>
            <column-text>
              c2
            </column-text>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonEdit12"
              type="button"
            >
              Edit
            </button>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonDel12"
              type="button"
            >
              Del
            </button>
          </td>
        </tr>
        <tr>
          <td>
            <column-text>
              <input
                class="form-control"
                data-testid="inputColA"
                style="min-width: 10em;"
                value="a3"
              />
            </column-text>
          </td>
          <td>
            <column-set>
              <div>
                <input
                  data-testid="inputColB1"
                  type="checkbox"
                />
                 
                c1
              </div>
            </column-set>
          </td>
          <td>
            <column-text>
              <input
                class="form-control"
                data-testid="inputColC"
                style="min-width: 10em; border-color: red;"
                value="2022-01-04"
              />
            </column-text>
          </td>
          <td>
            <column-text>
              <div>
                <label
                  class="form-label"
                >
                  id
                </label>
                <div
                  class="rbt"
                  style="min-width: 10em; border-color: red; outline: none; position: relative;"
                  tabindex="-1"
                >
                  <div
                    style="display: flex; flex: 1; height: 100%; position: relative;"
                  >
                    <input
                      aria-autocomplete="both"
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      autocomplete="off"
                      class="rbt-input-main form-control rbt-input"
                      data-testid="inputColD"
                      placeholder="Choose..."
                      role="combobox"
                      type="text"
                      value=""
                    />
                    <input
                      aria-hidden="true"
                      class="rbt-input-hint"
                      readonly=""
                      style="background-color: transparent; border-color: transparent; box-shadow: none; color: rgba(0, 0, 0, 0.54); left: 0px; pointer-events: none; position: absolute; top: 0px; width: 100%; border-style: inset inset inset inset; border-width: 2px 2px 2px 2px; line-height: normal; padding: 1px 1px 1px 1px;"
                      tabindex="-1"
                      value=""
                    />
                  </div>
                </div>
              </div>
              <div>
                <label
                  class="form-label"
                >
                  bc
                </label>
                <div
                  class="rbt"
                  style="min-width: 10em; border-color: red; outline: none; position: relative;"
                  tabindex="-1"
                >
                  <div
                    style="display: flex; flex: 1; height: 100%; position: relative;"
                  >
                    <input
                      aria-autocomplete="both"
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      autocomplete="off"
                      class="rbt-input-main form-control rbt-input"
                      data-testid="inputViewColD"
                      placeholder="Choose..."
                      role="combobox"
                      type="text"
                      value=""
                    />
                    <input
                      aria-hidden="true"
                      class="rbt-input-hint"
                      readonly=""
                      style="background-color: transparent; border-color: transparent; box-shadow: none; color: rgba(0, 0, 0, 0.54); left: 0px; pointer-events: none; position: absolute; top: 0px; width: 100%; border-style: inset inset inset inset; border-width: 2px 2px 2px 2px; line-height: normal; padding: 1px 1px 1px 1px;"
                      tabindex="-1"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </column-text>
          </td>
          <td>
            <table-buttons>
              <button
                class="btn btn-primary"
                data-testid="buttonColE13"
                type="button"
              >
                13/a3
              </button>
            </table-buttons>
          </td>
          <td>
            <column-text>
              <div>
                <label
                  class="form-label"
                >
                  bc
                </label>
                <div
                  class="rbt"
                  style="min-width: 10em; border-color: red; outline: none; position: relative;"
                  tabindex="-1"
                >
                  <div
                    style="display: flex; flex: 1; height: 100%; position: relative;"
                  >
                    <input
                      aria-autocomplete="both"
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      autocomplete="off"
                      class="rbt-input-main form-control rbt-input"
                      data-testid="inputColF"
                      placeholder="Choose..."
                      role="combobox"
                      type="text"
                      value=""
                    />
                    <input
                      aria-hidden="true"
                      class="rbt-input-hint"
                      readonly=""
                      style="background-color: transparent; border-color: transparent; box-shadow: none; color: rgba(0, 0, 0, 0.54); left: 0px; pointer-events: none; position: absolute; top: 0px; width: 100%; border-style: inset inset inset inset; border-width: 2px 2px 2px 2px; line-height: normal; padding: 1px 1px 1px 1px;"
                      tabindex="-1"
                      value=""
                    />
                  </div>
                </div>
              </div>
              <div>
                <label
                  class="form-label"
                >
                  id
                </label>
                <div
                  class="rbt"
                  style="min-width: 10em; border-color: red; outline: none; position: relative;"
                  tabindex="-1"
                >
                  <div
                    style="display: flex; flex: 1; height: 100%; position: relative;"
                  >
                    <input
                      aria-autocomplete="both"
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      autocomplete="off"
                      class="rbt-input-main form-control rbt-input"
                      data-testid="inputViewColF"
                      placeholder="Choose..."
                      role="combobox"
                      type="text"
                      value=""
                    />
                    <input
                      aria-hidden="true"
                      class="rbt-input-hint"
                      readonly=""
                      style="background-color: transparent; border-color: transparent; box-shadow: none; color: rgba(0, 0, 0, 0.54); left: 0px; pointer-events: none; position: absolute; top: 0px; width: 100%; border-style: inset inset inset inset; border-width: 2px 2px 2px 2px; line-height: normal; padding: 1px 1px 1px 1px;"
                      tabindex="-1"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </column-text>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonSave"
              type="button"
            >
              Save
            </button>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonCancel"
              type="button"
            >
              Cancel
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <button
    class="btn btn-primary"
    data-testid="buttonAdd"
    type="button"
  >
    Add
  </button>
  <button
    class="btn btn-primary"
    data-testid="buttonClear"
    type="button"
  >
    Clear
  </button>
</div>
`;

exports[`Table enters row into list 3`] = `
<div
  data-testid="tableA"
>
  <div
    style="overflow: auto; max-height: 80vh;"
  >
    <table
      class="table table-striped table-bordered table-hover"
    >
      <thead>
        <tr>
          <th>
            ColA
          </th>
          <th>
            ColB
          </th>
          <th>
            ColC
          </th>
          <th>
            ColD
          </th>
          <th>
            ColE
          </th>
          <th>
            ColF
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <column-text>
              a1
            </column-text>
          </td>
          <td>
            <column-set>
              <div>
                c1
              </div>
            </column-set>
          </td>
          <td>
            <column-text>
              2001/01/01
            </column-text>
          </td>
          <td>
            <column-text>
              c1
            </column-text>
          </td>
          <td>
            <table-buttons>
              <button
                class="btn btn-primary"
                data-testid="buttonColE11"
                type="button"
              >
                11/a1
              </button>
            </table-buttons>
          </td>
          <td>
            <column-text>
              -
            </column-text>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonEdit11"
              type="button"
            >
              Edit
            </button>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonDel11"
              type="button"
            >
              Del
            </button>
          </td>
        </tr>
        <tr>
          <td>
            <column-text>
              a2
            </column-text>
          </td>
          <td>
            <column-set>
              -
            </column-set>
          </td>
          <td>
            <column-text>
              2002/01/01
            </column-text>
          </td>
          <td>
            <column-text>
              c2
            </column-text>
          </td>
          <td>
            <table-buttons>
              <button
                class="btn btn-primary"
                data-testid="buttonColE12"
                type="button"
              >
                12/a2
              </button>
            </table-buttons>
          </td>
          <td>
            <column-text>
              c2
            </column-text>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonEdit12"
              type="button"
            >
              Edit
            </button>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonDel12"
              type="button"
            >
              Del
            </button>
          </td>
        </tr>
        <tr>
          <td>
            <column-text>
              a3
            </column-text>
          </td>
          <td>
            <column-set>
              -
            </column-set>
          </td>
          <td>
            <column-text>
              2022/01/04
            </column-text>
          </td>
          <td>
            <column-text>
              -
            </column-text>
          </td>
          <td>
            <table-buttons>
              <button
                class="btn btn-primary"
                data-testid="buttonColE13"
                type="button"
              >
                13/a3
              </button>
            </table-buttons>
          </td>
          <td>
            <column-text>
              -
            </column-text>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonEdit13"
              type="button"
            >
              Edit
            </button>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonDel13"
              type="button"
            >
              Del
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <button
    class="btn btn-primary"
    data-testid="buttonAdd"
    type="button"
  >
    Add
  </button>
  <button
    class="btn btn-primary"
    data-testid="buttonClear"
    type="button"
  >
    Clear
  </button>
</div>
`;

exports[`Table enters row into list 4`] = `
<p
  data-testid="msg"
/>
`;

exports[`Table enters row into list 5`] = `
<p
  data-testid="msg"
>
  ColE - 13/a3
</p>
`;

exports[`Table import export 1`] = `
<div
  data-testid="tableA"
>
  <div
    style="overflow: auto; max-height: 80vh;"
  >
    <table
      class="table table-striped table-bordered table-hover"
    >
      <thead>
        <tr>
          <th>
            ColA
          </th>
          <th>
            ColB
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <column-text>
              a1
            </column-text>
          </td>
          <td>
            <column-set>
              <div>
                c1
              </div>
            </column-set>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonEdit1"
              type="button"
            >
              Edit
            </button>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonDel1"
              type="button"
            >
              Del
            </button>
          </td>
        </tr>
        <tr>
          <td>
            <column-text>
              a2
            </column-text>
          </td>
          <td>
            <column-set>
              -
            </column-set>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonEdit2"
              type="button"
            >
              Edit
            </button>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonDel2"
              type="button"
            >
              Del
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <button
    class="btn btn-primary"
    data-testid="buttonAdd"
    type="button"
  >
    Add
  </button>
  <button
    class="btn btn-primary"
    data-testid="buttonClear"
    type="button"
  >
    Clear
  </button>
  <div>
    <button
      class="btn btn-primary"
      data-testid="buttonImport.csv"
      type="button"
    >
      Import 
      .csv
    </button>
  </div>
  <div>
    <button
      class="btn btn-primary"
      data-testid="buttonExport.csv"
      type="button"
    >
      Export 
      .csv
    </button>
  </div>
</div>
`;

exports[`Table import export 2`] = `
<div
  data-testid="tableA"
>
  <div
    style="overflow: auto; max-height: 80vh;"
  >
    <table
      class="table table-striped table-bordered table-hover"
    >
      <thead>
        <tr>
          <th>
            ColA
          </th>
          <th>
            ColB
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <column-text>
              a1
            </column-text>
          </td>
          <td>
            <column-set>
              <div>
                c1
              </div>
            </column-set>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonEdit1"
              type="button"
            >
              Edit
            </button>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonDel1"
              type="button"
            >
              Del
            </button>
          </td>
        </tr>
        <tr>
          <td>
            <column-text>
              a2
            </column-text>
          </td>
          <td>
            <column-set>
              -
            </column-set>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonEdit2"
              type="button"
            >
              Edit
            </button>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonDel2"
              type="button"
            >
              Del
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <button
    class="btn btn-primary"
    data-testid="buttonAdd"
    type="button"
  >
    Add
  </button>
  <button
    class="btn btn-primary"
    data-testid="buttonClear"
    type="button"
  >
    Clear
  </button>
  <div>
    <button
      class="btn btn-primary"
      data-testid="buttonImport.csv"
      type="button"
    >
      Import 
      .csv
    </button>
  </div>
  <div>
    <button
      class="btn btn-primary"
      data-testid="buttonExport.csv"
      type="button"
    >
      Export 
      .csv
    </button>
    <div
      style="border: 1px solid orange; margin: .5em;"
    >
      <button
        class="btn btn-primary"
        data-testid="buttonExportAccept.csv"
        type="button"
      >
        Accept
      </button>
      <h4>
        A.csv
      </h4>
      <pre
        style="overflow: scroll; white-space: pre-wrap;"
      >
        id,aa,ab,ac
1,a1,1,2001/01/01
2,a2,,2002/01/01,1
      </pre>
    </div>
  </div>
</div>
`;

exports[`Table inlineHeaders 1`] = `
<div
  data-testid="tableA"
>
  <div
    style="overflow: auto; max-height: 80vh;"
  >
    <table
      class="table table-striped table-bordered table-hover"
    >
      <tbody>
        <tr>
          <td
            colspan="4"
          >
            <div>
              <div>
                <b>
                  ColA
                </b>
              </div>
              <div>
                <column-text>
                  a1
                </column-text>
              </div>
            </div>
            <div>
              <div>
                <b>
                  ColB
                </b>
              </div>
              <div>
                <column-set>
                  <div>
                    c1
                  </div>
                </column-set>
              </div>
            </div>
            <div>
              <div>
                <b />
              </div>
              <div>
                <button
                  class="btn btn-primary"
                  data-testid="buttonEdit1"
                  type="button"
                >
                  Edit
                </button>
              </div>
            </div>
            <div>
              <div>
                <b />
              </div>
              <div>
                <button
                  class="btn btn-primary"
                  data-testid="buttonDel1"
                  type="button"
                >
                  Del
                </button>
              </div>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <p>
    1
     - 
    1
     of 
    2
  </p>
  <button
    class="btn btn-primary"
    data-testid="buttonPrev"
    type="button"
  >
    Prev
  </button>
  <button
    class="btn btn-primary"
    data-testid="buttonNext"
    type="button"
  >
    Next
  </button>
  <button
    class="btn btn-primary"
    data-testid="buttonAdd"
    type="button"
  >
    Add
  </button>
  <button
    class="btn btn-primary"
    data-testid="buttonClear"
    type="button"
  >
    Clear
  </button>
</div>
`;

exports[`Table pages 1`] = `
<div
  data-testid="tableA"
>
  <div
    style="overflow: auto; max-height: 80vh;"
  >
    <table
      class="table table-striped table-bordered table-hover"
    >
      <thead>
        <tr>
          <th>
            ColA
          </th>
          <th>
            ColB
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <column-text>
              a1
            </column-text>
          </td>
          <td>
            <column-set>
              <div>
                c1
              </div>
            </column-set>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonEdit1"
              type="button"
            >
              Edit
            </button>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonDel1"
              type="button"
            >
              Del
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <p>
    1
     - 
    1
     of 
    2
  </p>
  <button
    class="btn btn-primary"
    data-testid="buttonPrev"
    type="button"
  >
    Prev
  </button>
  <button
    class="btn btn-primary"
    data-testid="buttonNext"
    type="button"
  >
    Next
  </button>
  <button
    class="btn btn-primary"
    data-testid="buttonAdd"
    type="button"
  >
    Add
  </button>
  <button
    class="btn btn-primary"
    data-testid="buttonClear"
    type="button"
  >
    Clear
  </button>
</div>
`;

exports[`Table pages next prev 1`] = `
<div
  data-testid="tableA"
>
  <div
    style="overflow: auto; max-height: 80vh;"
  >
    <table
      class="table table-striped table-bordered table-hover"
    >
      <thead>
        <tr>
          <th>
            ColA
          </th>
          <th>
            ColB
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <column-text>
              a1
            </column-text>
          </td>
          <td>
            <column-set>
              <div>
                c1
              </div>
            </column-set>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonEdit1"
              type="button"
            >
              Edit
            </button>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonDel1"
              type="button"
            >
              Del
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <p>
    1
     - 
    1
     of 
    2
  </p>
  <button
    class="btn btn-primary"
    data-testid="buttonPrev"
    type="button"
  >
    Prev
  </button>
  <button
    class="btn btn-primary"
    data-testid="buttonNext"
    type="button"
  >
    Next
  </button>
  <button
    class="btn btn-primary"
    data-testid="buttonAdd"
    type="button"
  >
    Add
  </button>
  <button
    class="btn btn-primary"
    data-testid="buttonClear"
    type="button"
  >
    Clear
  </button>
</div>
`;

exports[`Table pages next prev 2`] = `
<div
  data-testid="tableA"
>
  <div
    style="overflow: auto; max-height: 80vh;"
  >
    <table
      class="table table-striped table-bordered table-hover"
    >
      <thead>
        <tr>
          <th>
            ColA
          </th>
          <th>
            ColB
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <column-text>
              a2
            </column-text>
          </td>
          <td>
            <column-set>
              -
            </column-set>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonEdit2"
              type="button"
            >
              Edit
            </button>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonDel2"
              type="button"
            >
              Del
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <p>
    2
     - 
    2
     of 
    2
  </p>
  <button
    class="btn btn-primary"
    data-testid="buttonPrev"
    type="button"
  >
    Prev
  </button>
  <button
    class="btn btn-primary"
    data-testid="buttonNext"
    type="button"
  >
    Next
  </button>
  <button
    class="btn btn-primary"
    data-testid="buttonAdd"
    type="button"
  >
    Add
  </button>
  <button
    class="btn btn-primary"
    data-testid="buttonClear"
    type="button"
  >
    Clear
  </button>
</div>
`;

exports[`Table pages next prev 3`] = `
<div
  data-testid="tableA"
>
  <div
    style="overflow: auto; max-height: 80vh;"
  >
    <table
      class="table table-striped table-bordered table-hover"
    >
      <thead>
        <tr>
          <th>
            ColA
          </th>
          <th>
            ColB
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <column-text>
              a2
            </column-text>
          </td>
          <td>
            <column-set>
              -
            </column-set>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonEdit2"
              type="button"
            >
              Edit
            </button>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonDel2"
              type="button"
            >
              Del
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <p>
    2
     - 
    2
     of 
    2
  </p>
  <button
    class="btn btn-primary"
    data-testid="buttonPrev"
    type="button"
  >
    Prev
  </button>
  <button
    class="btn btn-primary"
    data-testid="buttonNext"
    type="button"
  >
    Next
  </button>
  <button
    class="btn btn-primary"
    data-testid="buttonAdd"
    type="button"
  >
    Add
  </button>
  <button
    class="btn btn-primary"
    data-testid="buttonClear"
    type="button"
  >
    Clear
  </button>
</div>
`;

exports[`Table pages next prev 4`] = `
<div
  data-testid="tableA"
>
  <div
    style="overflow: auto; max-height: 80vh;"
  >
    <table
      class="table table-striped table-bordered table-hover"
    >
      <thead>
        <tr>
          <th>
            ColA
          </th>
          <th>
            ColB
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <column-text>
              a1
            </column-text>
          </td>
          <td>
            <column-set>
              <div>
                c1
              </div>
            </column-set>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonEdit1"
              type="button"
            >
              Edit
            </button>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonDel1"
              type="button"
            >
              Del
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <p>
    1
     - 
    1
     of 
    2
  </p>
  <button
    class="btn btn-primary"
    data-testid="buttonPrev"
    type="button"
  >
    Prev
  </button>
  <button
    class="btn btn-primary"
    data-testid="buttonNext"
    type="button"
  >
    Next
  </button>
  <button
    class="btn btn-primary"
    data-testid="buttonAdd"
    type="button"
  >
    Add
  </button>
  <button
    class="btn btn-primary"
    data-testid="buttonClear"
    type="button"
  >
    Clear
  </button>
</div>
`;
